<resources>
    <string name="app_name">My Calculator</string>
    <string name="_1">clr</string>
    <string name="_2">/</string>
    <string name="_3">*</string>
    <string name="_4">del</string>
    <string name="_5">7</string>
    <string name="_6">8</string>
    <string name="_7">9</string>
    <string name="_8">-</string>
    <string name="_9">4</string>
    <string name="_10">5</string>
    <string name="_11">6</string>
    <string name="_12">+</string>
    <string name="_13">1</string>
    <string name="_14">2</string>
    <string name="_15">3</string>
    <string name="_16">=</string>
    <string name="_17">0</string>
    <string name="_18">,</string>
    <string name="res">%f</string>
    <string name="themes_light">Светлая тема</string>
    <string name="themes_dark">Темная тема</string>
</resources>