<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/result"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:textSize="25sp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:background="@color/gray"
        android:minHeight="88dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_CLR"
        style="@style/CustomButton.2"
        android:text="@string/_1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_DIV"
        style="@style/CustomButton"
        android:text="@string/_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_MULT"
        style="@style/CustomButton"
        android:text="@string/_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_DEL"
        style="@style/CustomButton.2"
        android:text="@string/_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        style="@style/CustomButton"
        android:text="@string/_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        style="@style/CustomButton"
        android:text="@string/_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        style="@style/CustomButton"
        android:text="@string/_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_SUB"
        style="@style/CustomButton"
        android:text="@string/_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        style="@style/CustomButton"
        android:text="@string/_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        style="@style/CustomButton"
        android:text="@string/_10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        style="@style/CustomButton"
        android:text="@string/_11" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ADD"
        style="@style/CustomButton"
        android:text="@string/_12" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        style="@style/CustomButton"
        android:text="@string/_13" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        style="@style/CustomButton"
        android:text="@string/_14" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        style="@style/CustomButton"
        android:text="@string/_15" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_EQUALL"
        style="@style/CustomButton.2"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"
        android:text="@string/_16" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        style="@style/CustomButton"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/_17" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_DOT"
        style="@style/CustomButton"
        android:layout_column="2"
        android:text="@string/_18" />


</GridLayout>